[gd_scene load_steps=3 format=3 uid="uid://dvjlkpjvjxn0h"]

[ext_resource type="Script" uid="uid://bfipl41n3o86m" path="res://addons/placeholder_recorder/PlaceholderRecorder.gd" id="1_phai6"]

[sub_resource type="AudioStreamMicrophone" id="1"]

[node name="MicRecord" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_phai6")

[node name="AudioStreamRecord" type="AudioStreamPlayer" parent="."]
stream = SubResource("1")
autoplay = true
bus = &"Record"

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
autoplay = true

[node name="AudioStreamPlayer2" type="AudioStreamPlayer" parent="."]
volume_db = -6.0

[node name="Status" type="Label" parent="."]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 26.0
grow_horizontal = 2
text = "Status: "
horizontal_alignment = 1

[node name="RecordButton" type="Button" parent="."]
layout_mode = 0
offset_left = 9.0
offset_top = 30.0
offset_right = 139.0
offset_bottom = 70.0
text = "Record"

[node name="PlayButton" type="Button" parent="."]
layout_mode = 0
offset_left = 143.0
offset_top = 32.0
offset_right = 273.0
offset_bottom = 72.0
disabled = true
text = "Play"

[node name="FormatLabel" type="Label" parent="."]
layout_mode = 0
offset_left = 16.0
offset_top = 119.0
offset_right = 85.0
offset_bottom = 145.0
text = "Format:"

[node name="FormatOptionButton" type="OptionButton" parent="."]
layout_mode = 0
offset_left = 114.0
offset_top = 116.0
offset_right = 343.0
offset_bottom = 147.0
selected = 1
item_count = 3
popup/item_0/text = "8-bit Uncompressed"
popup/item_0/id = 0
popup/item_1/text = "16-bit Uncompressed"
popup/item_1/id = 1
popup/item_2/text = "IMA ADPCM Compression"
popup/item_2/id = 2

[node name="MixRateLabel" type="Label" parent="."]
layout_mode = 0
offset_left = 16.0
offset_top = 158.0
offset_right = 85.0
offset_bottom = 184.0
text = "Mix rate:"

[node name="MixRateOptionButton" type="OptionButton" parent="."]
layout_mode = 0
offset_left = 114.0
offset_top = 155.0
offset_right = 216.0
offset_bottom = 186.0
selected = 4
item_count = 6
popup/item_0/text = "11025 Hz"
popup/item_0/id = 0
popup/item_1/text = "16000 Hz"
popup/item_1/id = 1
popup/item_2/text = "22050 Hz"
popup/item_2/id = 2
popup/item_3/text = "32000 Hz"
popup/item_3/id = 3
popup/item_4/text = "44100 Hz"
popup/item_4/id = 4
popup/item_5/text = "48000 Hz"
popup/item_5/id = 5

[node name="StereoLabel" type="Label" parent="."]
layout_mode = 0
offset_left = 16.0
offset_top = 199.0
offset_right = 85.0
offset_bottom = 225.0
text = "Stereo:"

[node name="StereoCheckButton" type="CheckButton" parent="."]
layout_mode = 0
offset_left = 109.0
offset_top = 199.0
offset_right = 153.0
offset_bottom = 230.0
button_pressed = true

[node name="FileDialog" type="FileDialog" parent="."]
unique_name_in_owner = true
initial_position = 1
size = Vector2i(494, 175)

[node name="SaveButton" type="Button" parent="."]
layout_mode = 0
offset_left = 277.0
offset_top = 32.0
offset_right = 407.0
offset_bottom = 72.0
disabled = true
text = "Save"

[node name="AudioInputOptionButton" type="OptionButton" parent="."]
unique_name_in_owner = true
layout_mode = 0
offset_left = 11.0
offset_top = 81.0
offset_right = 381.0
offset_bottom = 112.0
selected = 0
item_count = 5
popup/item_0/text = "Microphone (Steam Streaming Microphone)"
popup/item_0/id = 0
popup/item_1/text = "Microphone (HD Pro Webcam C920)"
popup/item_1/id = 1
popup/item_2/text = "Microphone (C922 Pro Stream Webcam)"
popup/item_2/id = 2
popup/item_3/text = "Microphone (Virtual Desktop Audio)"
popup/item_3/id = 3
popup/item_4/text = "Microphone (Yeti Stereo Microphone)"
popup/item_4/id = 4
